# mcpm

./: Cargo.toml  README.md
src/: lib.rs  main.rs
src/cli/: mod.rs
src/common/: mod.rs
src/minecraft/: mod.rs
src/modrinth_wrapper/: mod.rs
