[package]
name = "mcpm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0.29", features = ["derive"] }
directories = "4.0.1"
reqwest = {version = "0.11.13", features = ["blocking"]}
serde = {version = "1.0.148", features = ["derive"]}
serde_json = "1.0.89"
